--- a/Myschool.html
+++ b/Myschool.html
@@ -8,8 +8,6 @@
 <body>
     <H1>My school's Mission
     </H1>
-    <P>My school's mission is to prepare all students to become life-long learners through inquiry, collaboration and
-    discovery. Each student will feel a sense of belonging in our community while learning social emotional and academic skills to be
-    successful in an ever-changing and diverse society.</P>
+    <P>My school's mission is to prepare all students to become life-long learners through inquiry, collaboration and discovery. Each student will feel a sense of belonging in our community while learning social emotional and academic skills to be successful in an ever-changing and diverse society.</P>
 </body>
 </html>
